# ship-it

./: .gitignore  CONTRACTS.md  README.md  ship-it.config.example.jsonc
.claude-plugin/: marketplace.json  plugin.json
docs/: index.html  ship-it.html  stack-it.html  styles.css
docs/_src/: app.css
plugins/ship-it/: CONTRACTS.md  README.md  ship-it.config.example.jsonc
plugins/ship-it/.claude-plugin/: plugin.json
plugins/ship-it/scripts/: ci-watch.sh  cleanup-worktrees.sh  config.schema.jq  load-config.sh  setup-worktrees.sh  validate-config.sh  watch-merges.sh
plugins/ship-it/skills/comment-cleanup/: SKILL.md
plugins/ship-it/skills/fix-one-issue/: SKILL.md
plugins/ship-it/skills/init/: SKILL.md
plugins/ship-it/skills/plan-one-issue/: SKILL.md
plugins/ship-it/skills/review-and-address/: SKILL.md
plugins/stack-it/: README.md
plugins/stack-it/.claude-plugin/: plugin.json
plugins/stack-it/agents/: researcher.md
plugins/stack-it/scripts/: test_validate_yaml.py  validate_yaml.py
plugins/stack-it/skills/document-stack/evals/fixtures/proj-no-lockfile/: pyproject.toml
plugins/stack-it/skills/document-stack/evals/fixtures/proj-no-lockfile/app/: main.py
scripts/: config.schema.jq  load-config.sh  openspec-archive.sh  setup-worktrees.sh  verify-init.sh
skills/ci-fix/: SKILL.md
skills/comment-cleanup/: SKILL.md
skills/fix-one-issue/: SKILL.md
skills/init/: SKILL.md
skills/open-pr/: SKILL.md
skills/plan-one-issue/: SKILL.md
skills/ship-issues/: SKILL.md
skills/ship-issues/references/: doc-jobs.md  workflow.md
(+34 files in other folders)
