[project]
name = "todo-api"
version = "0.1.0"
description = "Small todo REST API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.34.0",
    "sqlmodel==0.0.22",
]

[dependency-groups]
dev = [
    "pytest==8.3.0",
    "httpx==0.28.1",
    "ruff==0.8.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
